--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,28 @@
     "type": "library",
     "license": "MIT",
     "keywords": ["laravel", "api", "casters", "transform"],
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Pavel Koch",
             "email": "kouks.koch@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
         "illuminate/database": "^5.3"
+    },
+    "require-dev": {
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~5.0"
     },
     "autoload": {
         "psr-4": {
             "Koch\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests"
+        ]
     }
 }
