--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6.4",
         "illuminate/database": "^5.3"
     },
     "require-dev": {
