--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "illuminate/database": "^5.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "~5.0",
+        "fzaninotto/Faker": "^1.6"
     },
     "autoload": {
         "psr-4": {
